@@ -27,10 +27,14 @@ def create_option_file(user_path):
     config_dict.set('LOG', 'path', str(user_path))
     config_dict.set('SENSOR', 'sensors_rate', '30')
     config_dict.set('DISPLAY', 'in_display_rate', '30')
-    config_dict.set('DISPLAY', 'in_sensor', '')
+    config_dict.set('DISPLAY', 'in_temperature', '')
+    config_dict.set('DISPLAY', 'in_humidity', '')
+    config_dict.set('DISPLAY', 'in_pressure', '')
     config_dict.set('DISPLAY', 'in_msl_pressure', 'False')
     config_dict.set('DISPLAY', 'out_display_rate', '30')
-    config_dict.set('DISPLAY', 'out_sensor', '')
+    config_dict.set('DISPLAY', 'out_temperature', '')
+    config_dict.set('DISPLAY', 'out_humidity', '')
+    config_dict.set('DISPLAY', 'out_pressure', '')
     config_dict.set('DISPLAY', 'out_msl_pressure', 'False')
     config_dict.set('TIMESERIES', 'in_temperature', '')
     config_dict.set('TIMESERIES', 'in_humidity', '')
@@ -60,15 +64,21 @@ def update_config_file(user_path):
     option_missing = False
     config_dict = configparser.ConfigParser()
     config_dict.read(ini_path)
-    if config_dict['SYSTEM'].getboolean('auto_check_connexion') is None:
-        option_missing = True
-        config_dict.set('SYSTEM', 'auto_check_connexion', 'False')
-    if config_dict['SYSTEM'].get('auto_connexion_unit') is None:
-        option_missing = True
-        config_dict.set('SYSTEM', 'auto_connexion_unit', 'minutes')
-    if config_dict['SYSTEM'].get('auto_connexion_value') is None:
-        option_missing = True
-        config_dict.set('SYSTEM', 'auto_connexion_value', '')
+    new_option_list = {'SYSTEM': {'auto_check_connexion': 'False',
+                                  'auto_connexion_unit': 'minutes',
+                                  'auto_connexion_value': ''},
+                       'DISPLAY': {'in_temperature': '', 'in_humidity': '', 'in_pressure': '',
+                                   'out_temperature': '', 'out_humidity': '', 'out_pressure': ''}}
+    for section, options in new_option_list.items():
+        try:
+            config_dict[section]
+        except KeyError:
+            option_missing = True
+            config_dict.add_section(section)
+        for option, value in options.items():
+            if config_dict[section].getboolean(option) is None:
+                option_missing = True
+                config_dict.set(section, option, value)
     if option_missing:
         ini_file = open(ini_path, 'w')
         config_dict.write(ini_file)
